# Withdico

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
tests/: test_dicoc.py
withdico/: __init__.py
