[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "withdico"
version = "0.1.0"
description = "Lightweight dependency injection container for Python with Convention over Configuration"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "TAKANO Taku", email = "amnz.is@gmail.com" }]
keywords = ["dependency injection", "di", "ioc", "container"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/amnz/withdico"
Repository = "https://github.com/amnz/withdico"
Issues = "https://github.com/amnz/withdico/issues"

[tool.hatch.build.targets.wheel]
packages = ["withdico"]
